--- a/介绍.md
+++ b/介绍.md
@@ -7,7 +7,7 @@
 ##### 2.1 语音识别
 
 - 点击按钮： 触发语音识别
-- 打开一个新页面:：传值
+- 打开一个新页面：传值
 -  新页面接收值
 
 ##### 2.2 垃圾分类：滑块功能
@@ -17,6 +17,9 @@
 ##### 2.4 搜索记录
 
 input自动获取焦点：添加属性：`autofocus="autofocus"`
+
+<br>
+
 修改光标的颜色 ：`caret-color:red;`
 
 ##### 2.5 本地存储 ： 持久化存储
@@ -24,11 +27,17 @@ input自动获取焦点：添加属性：`autofocus="autofocus"`
 - 一进入页面，就需要【读取操作】
 
   如果没有key，就要设置一个
+
+  <br>
+  
   如果有key，那就读取、渲染
 
 - 如果本地存储中
 
   已经有了 ： 那就过滤掉重复的，并且前置
+
+  <br>
+  
   如果没有 ： 前置添加
 
 #### 
@@ -42,7 +51,10 @@ input自动获取焦点：添加属性：`autofocus="autofocus"`
 2. 请求参数说明：
 
     key : dfe7a5dc90a9be32d35d15d5a06eb619
-      q   : 需要查询的垃圾名称(含材质)，比如：小龙虾、苹果、纸巾
+
+   <br>
+   
+      q : 需要查询的垃圾名称(含材质)，比如：小龙虾、苹果、纸巾
 
 #### 二、垃圾分类基本信息
 
